--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -206,9 +206,6 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    position: absolute;
-    right: 5rem;
-    bottom: 10rem;
 }
 
 .RightRoomDetailBg {
@@ -220,3 +217,23 @@
     height: 30.6rem;
 }
 
+.RoundsRoomDetail {
+    position: absolute;
+    left: 3rem;
+    bottom: 2.8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+
+.RoundsRoomDetail p:nth-of-type(1) {
+    font-family: "Roboto", sans-serif;
+    color: #828283;
+    font-size: 12px;
+}
+
+.RoundsRoomDetail p:nth-of-type(2) {
+    font-family: "Afacad", sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+}
