--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -281,3 +281,25 @@
     bottom: 2.5rem;
     left: 20rem;
 }
+
+.MapRoomDetail {
+    position: absolute;
+    left:22.5rem;
+    bottom: 2.8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+
+.MapRoomDetail p:nth-of-type(1) {
+    font-family: "Roboto", sans-serif;
+    color: #828283;
+    font-size: 12px;
+}
+
+.MapRoomDetail p:nth-of-type(2) {
+    font-family: "Afacad", sans-serif;
+    font-size: 20px;
+    font-weight: 800;
+    text-shadow: #ffffffd2 1px 0 50px;
+}
