--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -341,3 +341,57 @@
     #ffffff 0px 0px 80px;
     animation: pulseShadow 3.5s ease-in-out infinite;
   }
+
+.EditeLobbyButton {
+    font-family: inherit;
+    font-size: 20px;
+    background: #191919;
+    color: white;
+    padding: 0.7em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    border: 1px solid #303030;
+    overflow: hidden;
+    transition: all 0.2s;
+    cursor: pointer;
+  }
+  
+  .EditeLobbyButton span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .EditeLobbyButton svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .EditeLobbyButton:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+  }
+  
+  .EditeLobbyButton:hover svg {
+    transform: translateX(1.2em)  scale(1.1);
+  }
+  
+  .EditeLobbyButton:hover span {
+    transform: translateX(5em);
+  }
+  
+  .EditeLobbyButton:active {
+    transform: scale(0.95);
+  }
+  
+  @keyframes fly-1 {
+    from {
+      transform: translateY(0.1em);
+    }
+  
+    to {
+      transform: translateY(-0.1em);
+    }
+  }
+  
