--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -412,3 +412,8 @@
     font-family: "Roboto", sans-serif;
     color: #8d8d8d;
   }
+
+  .BlueAndRedDivTeam {
+    display: flex;
+    flex-direction: column;
+  }
