--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -417,3 +417,12 @@
     display: flex;
     flex-direction: column;
   }
+
+  .TeamDiv {
+    background: url(../imgs/RedPlayerBgRoom.png) #3030300e;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 60rem;
+    height:20rem;
+    backdrop-filter: blur(10px);
+  }
