--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -420,11 +420,42 @@
     gap: 7px;
   }
 
+  .RedSvgBehindImg {
+    position: absolute;
+    z-index: 1;
+    width: 74rem;
+  }
+
   .TeamDiv {
-    background: url(../imgs/RedPlayerBgRoom.png) #3030300e;
+    background: url(../imgs/RedPlayerBgRoom.png) #17171726;
     background-repeat: no-repeat;
     background-size: contain;
-    width: 60rem;
-    height:20rem;
+    width: 54rem;
+    height:17.7rem;
+    z-index: 2;
+    overflow: hidden;
+    position: relative;
     backdrop-filter: blur(10px);
+    display: flex;
+    align-items: center;
+  }
+
+.BlueShadowForTeam {
+    width: 2px;
+    height: 60%;
+    -webkit-box-shadow: 12px 0px 68px 13px rgba(236,45,48,0.49); 
+    box-shadow: 12px 0px 78px 13px rgba(45, 70, 236, 0.49);
+    position: absolute;
+    left: 0rem;
+    z-index: 99;
+}
+
+  .RedShadowForTeam {
+    width: 2px;
+    height: 60%;
+    -webkit-box-shadow: 12px 0px 68px 13px rgba(236,45,48,0.49); 
+    box-shadow: 12px 0px 78px 13px rgba(236,45,48,0.49);
+    position: absolute;
+    left: 0rem;
+    z-index: 99;
   }
