--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -518,5 +518,14 @@
 }
 
 .TopTeamsDiv {
-    
+   display: flex; 
+   position: absolute;
+   top: 2rem;
+   left: 2rem;
+}
+
+.LeftDetailTeamTexts h3 {
+    font-family: "RangerRegular", sans-serif;
+    font-weight: 100;
+    color: #0088FF;
 }
