--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -594,4 +594,29 @@
     height:13rem;
     background: #3C3C3C;
     background: linear-gradient(180deg, rgba(60, 60, 60, 0) 0%, rgba(60, 60, 60, 0.2) 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.RedLineBottomBoxPLayer {
+    background: #FF1A1A;
+    background: linear-gradient(90deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 1) 50%, rgba(0, 0, 0, 0) 100%);
+    width: 70%;
+    height: 1.2px;
+    position: absolute;
+    bottom: 0;
+    display: none;
+}
+
+.ReadyLineBottomBoxPLayer {
+    background: #00d507;
+    background: linear-gradient(90deg,rgba(26, 255, 60, 0) 0%, #00d507 50%, rgba(0, 0, 0, 0) 100%);
+    width: 70%;
+    height: 1.2px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
 }
