--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -625,12 +625,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
+    width: 100%;
 }
 
 .IdAndKdDiv p {
-
+    font-size: 14px;
+    font-family: "Afacad", sans-serif;
+    font-weight: 100;
 }
