--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -599,6 +599,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 
 .RedLineBottomBoxPLayer {
@@ -672,4 +673,36 @@
 
   .displayNone {
     display: none !important;
+  }
+
+  .SteamProfileAllDiv {
+    transform: translateY(-5px);
+  }
+
+  .center-containerRoomPlayer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-2.5rem);
+  }
+  
+  .diamond-wrapperRoomPlayer {
+    width:70px;
+    height:70px;
+    overflow: hidden;
+    transform: rotate(45deg);
+  
+  }
+  
+  .diamond-wrapperRoomPlayer img {
+    max-width: 100%;
+    transform: rotate(-45deg) scale(1.42);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .SteamBGLine {
+    position: absolute;
+    transform: translateX(-1.6rem) translateY(-4.05rem);
   }
