--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -725,7 +725,7 @@
     background: #141313;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #141313 55%);
     width: 10.6rem;
-    height: 8rem;
+    height: 10rem;
     bottom: 0;
     display: flex;
     flex-direction: row;
@@ -740,4 +740,32 @@
     gap: 10px;
     position: absolute;
     bottom: 20px;
+    font-size: 14px;
+    font-family: "Afacad", sans-serif;
+    font-weight: 500;
+
+  }
+
+  .kickSetOwnerDiv p:nth-of-type(1) {
+    padding: 5px 10px;
+    border: 1px #ec1a1a solid;
+    cursor: pointer;
+    color: #ec1a1a;
+    transition: all ease .30s;
+  }
+
+  .kickSetOwnerDiv p:nth-of-type(2) {
+    padding: 5px 10px;
+    border: 1px #2a2a2a solid;
+    cursor: pointer;
+    color: #fff;
+    transition: all ease .30s;
+  }
+
+  .kickSetOwnerDiv p:hover {
+    scale: 1.05;
+  }
+
+  .kickSetOwnerDiv p:active {
+    transform: translate(2px , 2px);
   }
