--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -587,6 +587,7 @@
     position: absolute;
     bottom: 2rem;
     left: 2rem;
+    overflow: hidden;
 }
 
 .PlayerBoxRoom {
@@ -731,8 +732,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
+    transform: translateY(12rem);
+    transition: all ease .40s;
   }
+
 
   .kickSetOwnerDiv {
     display: flex;
@@ -768,4 +771,8 @@
 
   .kickSetOwnerDiv p:active {
     transform: translate(2px , 2px);
+  }
+
+  .CrownImg {
+    display: none;
   }
