--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -14,6 +14,13 @@
     overflow: hidden;
 }
 
+.BottomVector1 {
+    position: absolute;
+    bottom: 3vh;
+    animation: floatAround 4s infinite ease-in-out;
+    left: 41vw;
+}
+
 .BottomVector2 {
     position: absolute;
     top: 8vh;
@@ -407,6 +414,7 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
+    transform: translateY(1.5rem);
   }
 
   .BetMoneyLobbyText {
@@ -477,8 +485,8 @@
 .BlueShadowForTeam {
     width: 2px;
     height: 60%;
-    -webkit-box-shadow: 12px 0px 78px 13px rgba(0, 136, 255, 0.342); 
-    box-shadow: 12px 0px 88px 10px rgba(0, 136, 255, 0.342);
+    -webkit-box-shadow: 12px 0px 78px 13px rgba(0, 136, 255, 0.538); 
+    box-shadow: 12px 0px 88px 10px rgba(0, 136, 255, 0.538);
     position: absolute;
     left: 0rem;
     z-index: 99;
@@ -489,8 +497,8 @@
 .RedShadowForTeam {
     width: 2px;
     height: 60%;
-    -webkit-box-shadow: 12px 0px 78px 13px rgba(255, 0, 0, 0.342); 
-    box-shadow: 12px 0px 88px 10px rgba(255, 0, 0, 0.342);
+    -webkit-box-shadow: 12px 0px 78px 13px rgba(255, 0, 0, 0.507); 
+    box-shadow: 12px 0px 88px 10px rgba(255, 0, 0, 0.549);
     position: absolute;
     left: 0rem;
     z-index: 99;
@@ -512,10 +520,23 @@
 }
 
 .VsImage {
-    width: 5rem;
+    width: 4.8rem;
     position: absolute;
     z-index: 99;
+    animation: pulseVsImage 2.5s infinite ease-in-out;
 }
+
+@keyframes pulseVsImage {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
 
 .TopTeamsDiv {
    display: flex; 
@@ -539,6 +560,12 @@
     color: #0088FF;
     text-shadow: #0088FF 1px 0 30px;
 }
+
+.pulse-text {
+    text-shadow: #0088FF 1px 0 30px;
+    animation: pulseText 3s infinite ease-in-out;
+    display: inline-block;
+  }
 
 .RedTeamTextH3 {
     font-family: "RangerRegular", sans-serif;
@@ -607,7 +634,7 @@
     background: #0088FF;
     background: linear-gradient(90deg,rgba(255, 26, 26, 0) 0%, #0088FF 50%, rgba(0, 0, 0, 0) 100%);
     width: 70%;
-    height: 1.2px;
+    height: 1.5px;
     position: absolute;
     bottom: 0;
     display: flex;
