--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -1,3 +1,7 @@
+.animatonload {
+    opacity: 0; /* always start hidden so fade works */
+}
+
 .RoomPageLobby {
     display: flex;
     justify-content: center;
@@ -42,7 +46,7 @@
 
 .GreenBottomRoom {
     width: 19.3rem;
-    height: 3.6rem;
+    height: 3.4rem;
     background: linear-gradient(180deg,rgba(33, 128, 254, 0) 0%, rgba(33, 128, 254, 0) 50%, rgba(0, 255, 8, 0.1) 100%);
     border: .9px solid #153c1a76;
     position: relative;
@@ -132,7 +136,8 @@
 
 .RedBottomRoom {
     width: 19.3rem;
-    height: 3.6rem;
+    height: 3.4rem;
+
     background: #FF1A1A;
     background: linear-gradient(168deg,rgba(255, 26, 26, 0) 0%, rgba(255, 26, 26, 0.03) 50%, rgba(255, 26, 26, 0.2) 100%);
     border: .9px solid #401e1ea1;
