--- a/styles/RoomLobby.css
+++ b/styles/RoomLobby.css
@@ -3,7 +3,7 @@
 }
 
 .RoomPageLobby {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
