--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -137,7 +137,7 @@
   transform: scale(1.05);
 }
 
-.MapSelectDiv2 {
+.MapSelectDivLocked {
   position: relative;  
   width: 27rem;
   min-height: 6.7rem;
@@ -151,7 +151,7 @@
   z-index: 99 !important;
 }
 
-.MapSelectDiv2 img {
+.MapSelectDivLocked img {
   position: absolute;
   top: 0;
   left: 0;
@@ -160,7 +160,7 @@
   object-fit: cover;
 }
 
-.MapSelectDiv2:active {
+.MapSelectDivLocked:active {
   transform: scale(1.05);
 }
 
