--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -120,7 +120,7 @@
   align-items: center;
   overflow: hidden;
   border-radius: 8px;
-  transition: transform 0.5s ease; 
+  transition: transform 0.2s ease; 
   z-index: 99 !important;
 }
 
@@ -134,7 +134,7 @@
 }
 
 .MapSelectDiv:active {
-  transform: scale(1.05);
+  transform: translate(2px , 2px);
 }
 
 .MapSelectDivLocked {
@@ -160,14 +160,13 @@
   object-fit: cover;
 }
 
-.MapSelectDivLocked:active {
-  transform: scale(1.05);
-}
+
 
 .LockDivBg {
-  background: #585858;
+  background: #0e0e0e8a;
   width: 100%;
   min-height: 6.7rem;
+  z-index: 5 !important;
 }
 
 .MapImageLock {
@@ -189,6 +188,7 @@
   display: flex;
   flex-direction: column;
   gap: 7px;
+  z-index: 5 !important;
 }
 
 .MapDetailLock h1 {
