--- a/styles/SettingLobby.css
+++ b/styles/SettingLobby.css
@@ -213,6 +213,26 @@
   font-weight: 300;
 }
 
+.GrayselectMap {
+  pointer-events: none;  
+  transition: opacity 0.5s ease, transform 0.4s ease;
+  height: 6.4rem;
+  width: 6px;
+  position: absolute;
+  right: 0;
+  border-bottom-right-radius: 100%;
+  border-top-right-radius: 100%;
+  z-index: 99 !important;
+}
+
+.GrayselectMap {
+  background-color: #acacac;
+  -webkit-box-shadow: -28px 0px 50px 23px rgba(172, 172, 172, 0.52); 
+  box-shadow: -28px 0px 50px 23px rgba(172, 172, 172, 0.52);
+  right: .5px;
+  z-index: 99 !important;
+}
+
 .MapImage {
   z-index: 0;  
   border-radius: 8px;
