--- a/styles/Global.css
+++ b/styles/Global.css
@@ -152,3 +152,23 @@
     padding-right: 8px; 
     transform: translateX(5px);
   }
+
+  .CustomNotification {
+    display: none ;
+    width: fit-content;
+    padding: 0 30px;
+    height:3.2rem;
+    background: url(../imgs/notifBg.png) ;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    font-family: "Afacad", sans-serif;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 14px;
+    filter: drop-shadow(0 0 0.75rem black);
+    position: absolute;
+    top: 2rem;
+   }
