--- a/styles/Global.css
+++ b/styles/Global.css
@@ -158,7 +158,7 @@
     width: fit-content;
     padding: 0 30px;
     height:3.2rem;
-    background: url(../imgs/notifBg.png) ;
+    background: url(../imgs/n.png) ;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
