--- a/styles/Global.css
+++ b/styles/Global.css
@@ -200,13 +200,12 @@
     display: flex;
     flex-direction: row;
     justify-content: right;
-
     align-items: center;
     text-align: center;
     gap: 15px;
   }
   
-  .DeadLog span img {
+  .DeadLog p img {
     width: 30px;
     transform: translateY(4px);
     filter: drop-shadow(0 0 0.75rem rgb(73, 73, 73));
