--- a/styles/Global.css
+++ b/styles/Global.css
@@ -196,17 +196,27 @@
     font-size: var(--DeadLog-TextSize);
   }
 
-  .DeadLog p {
+  .DeadLogPlayer  {
     display: flex;
     flex-direction: row;
     justify-content: right;
     align-items: center;
     text-align: center;
     gap: 15px;
+    background: #000000;
+    background: linear-gradient(94deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.49) 68%);
+    padding-right: 20px;
+    padding-top: 3px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+  }
+
+  .DeadLogPlayer p {
+    
   }
   
-  .DeadLog p img {
+  .DeadLogPlayer p img {
     width: 30px;
-    transform: translateY(4px);
     filter: drop-shadow(0 0 0.75rem rgb(73, 73, 73));
   }
+  
