--- a/styles/Global.css
+++ b/styles/Global.css
@@ -212,7 +212,12 @@
   }
 
   .DeadLogPlayer p {
-    
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
   }
   
   .DeadLogPlayer p img {
