--- a/styles/Global.css
+++ b/styles/Global.css
@@ -190,7 +190,7 @@
     display: flex;
     justify-content: right;
     align-items: right;
-    gap: 2px;
+    gap: 5px;
     text-shadow: #fff 1px 0 20px;
     font-family: "RangerRegular", sans-serif;
     font-size: var(--DeadLog-TextSize);
@@ -221,7 +221,18 @@
   }
   
   .DeadLogPlayer p img {
-    width: 30px;
+    width: 35px;
+    height: 35px;
+    object-fit: contain;
     filter: drop-shadow(0 0 0.75rem rgb(73, 73, 73));
   }
   
+  .DeadLogRedLine {
+    height: 100%;
+    width:  2px;
+    background-color: rgb(255, 0, 0);
+    position: absolute;
+    right: 0px;
+    border-radius: 5px;
+
+  }
