--- a/styles/Global.css
+++ b/styles/Global.css
@@ -5,7 +5,6 @@
 
     :root {
       --main-color: #FF1A1A;
-      --DeadLog-TextSize: 20px;
     }
 
   * {
@@ -193,7 +192,7 @@
     gap: 5px;
     text-shadow: #fff 1px 0 20px;
     font-family: "RangerRegular", sans-serif;
-    font-size: var(--DeadLog-TextSize);
+    font-size: 20px;
   }
 
   .DeadLogPlayer  {
