--- a/styles/Global.css
+++ b/styles/Global.css
@@ -186,7 +186,7 @@
     height: fit-content;
     position: absolute;
     right: 1rem;
-    display: flex;
+    display: none;
     justify-content: right;
     align-items: right;
     gap: 5px;
@@ -237,4 +237,20 @@
     border-radius: 5px;
     -webkit-box-shadow: 10px 0px 43px 8px #FF0000; 
     box-shadow: 10px 0px 43px 8px #FF0000;
+  }
+
+  .RedEndScreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100vw;
+    background: url(../imgs/DeadUiBg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+    user-select: none;
+    color: #fff;
+    overflow: hidden;
   }
