--- a/styles/Global.css
+++ b/styles/Global.css
@@ -246,7 +246,7 @@
     font-family: 'Roboto', sans-serif;
     height: 100vh;
     width: 100vw;
-    background: url(../imgs/DeadUiBg.png);
+    background: url(../imgs/RedGreenAssestsUi/RedBg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
