--- a/styles/Global.css
+++ b/styles/Global.css
@@ -307,6 +307,29 @@
   transform: translateX(-16rem);
 }
 
+.center-containerRoomPlayer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-2.5rem);
+}
+
+.diamond-wrapperRoomPlayer {
+  width:70px;
+  height:70px;
+  overflow: hidden;
+  transform: rotate(45deg);
+
+}
+
+.diamond-wrapperRoomPlayer img {
+  max-width: 100%;
+  transform: rotate(-45deg) scale(1.42);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
   .RedEndScreen {
     display: flex;
