--- a/styles/Global.css
+++ b/styles/Global.css
@@ -304,7 +304,11 @@
   width: 25rem;
   height: 6rem;
   background-color: #dc0000;
-  transform: translateX(-16rem);
+  transform: translateX(-17.5rem);
+  display: flex;
+  flex-direction: row;
+  gap: 65px;
+  justify-content: end;
 }
 
 .center-containerTopUi {
@@ -327,6 +331,18 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.PlayerBoxTopUi {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.BlueLineBehindSteamBg {
+  position: absolute;
+  width:120px;
+  height:120px;
 }
 
 
