--- a/styles/Global.css
+++ b/styles/Global.css
@@ -344,6 +344,43 @@
 }
 
 
+
+
+
+
+.RedTeamTopUi {
+  position: absolute;
+  width: 25rem;
+  height: 6rem;
+  transform: translateX(25rem);
+  display: flex;
+  flex-direction: row;
+  gap: 65px;
+  justify-content: end;
+}
+
+.RedLineBehindSteamBg {
+  position: absolute;
+  width:90px;
+  height:90px;
+}
+
+.Reddiamond-wrapperTopUi {
+  width:50px;
+  height:50px;
+  overflow: hidden;
+  transform: rotate(45deg);
+  filter: drop-shadow(0 0 0.75rem #ff1a1a8d);
+}
+
+.Reddiamond-wrapperTopUi img {
+  max-width: 100%;
+  transform: rotate(-45deg) scale(1.42);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
   .RedEndScreen {
     display: flex;
     justify-content: center;
