--- a/styles/Global.css
+++ b/styles/Global.css
@@ -389,6 +389,17 @@
   object-fit: cover;
 }
 
+.Deadshadow {
+  max-width: 100%;
+  transform: rotate(-45deg) scale(1.42);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  background-color: #7b7b7b80;
+  z-index: 99 !important;
+}
+
   .RedEndScreen {
     display: flex;
     justify-content: center;
