--- a/styles/Global.css
+++ b/styles/Global.css
@@ -247,7 +247,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #5a5a5a;
+    background: url(../imgs/TopUiBg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   }
 
   .CenterDetailTexts {
@@ -345,15 +348,11 @@
 }
 
 
-
-
 .DeadLineBehindSteamBg {
   position: absolute;
   width:95px;
   height:95px;
 }
-
-
 
 
 .RedTeamTopUi {
