--- a/styles/Global.css
+++ b/styles/Global.css
@@ -253,6 +253,21 @@
     background-position: center;
   }
 
+  .TopTeamPlayerUiDeathmatch {
+    width: 80rem;
+    height: 10rem;
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background: url(../imgs/TopUiBg.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
   .CenterDetailTexts {
     display: flex;
     flex-direction: column;
