--- a/styles/Global.css
+++ b/styles/Global.css
@@ -243,7 +243,7 @@
     height: 10rem;
     position: absolute;
     top: 0;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: center;
     align-items: center;
