--- a/styles/Global.css
+++ b/styles/Global.css
@@ -357,6 +357,22 @@
   align-items: center;
 }
 
+.diamond-wrapperTopUiDeathMatch {
+  width:55px;
+  height:55px;
+  overflow: hidden;
+  transform: rotate(45deg);
+  filter: drop-shadow(0 0 0.75rem #e3e3e389);
+}
+
+.diamond-wrapperTopUiDeathMatch img {
+  max-width: 100%;
+  transform: rotate(-45deg) scale(1.42);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .diamond-wrapperTopUi {
   width:55px;
   height:55px;
