--- a/styles/Global.css
+++ b/styles/Global.css
@@ -374,6 +374,19 @@
   overflow: hidden;
   transform: rotate(45deg);
   filter: drop-shadow(0 0 0.75rem #e3e3e389);
+  animation: pulseShadowDeathMatch 2s infinite ease-in-out;
+}
+
+@keyframes pulseShadowDeathMatch {
+  0% {
+    filter: drop-shadow(0 0 0.5rem #e3e3e389);
+  }
+  50% {
+    filter: drop-shadow(0 0 1.5rem #e3e3e389);
+  }
+  100% {
+    filter: drop-shadow(0 0 0.5rem #e3e3e389);
+  }
 }
 
 .diamond-wrapperTopUiDeathMatch img {
